--- a/apps/mobile/ios/kortix/Info.plist
+++ b/apps/mobile/ios/kortix/Info.plist
@@ -40,6 +40,22 @@
     <string>12.0</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>mailto</string>
+      <string>message</string>
+      <string>googlegmail</string>
+      <string>inbox-gmail</string>
+      <string>ms-outlook</string>
+      <string>readdle-spark</string>
+      <string>airmail</string>
+      <string>ymail</string>
+      <string>superhuman</string>
+      <string>yandexmail</string>
+      <string>fastmail</string>
+      <string>protonmail</string>
+      <string>szn-email</string>
+    </array>
     <key>NSAppTransportSecurity</key>
     <dict>
       <key>NSAllowsArbitraryLoads</key>
