--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -71,6 +71,7 @@
     "react-i18next": "^16.0.1",
     "react-native": "0.81.5",
     "react-native-drawer-layout": "^4.1.13",
+    "react-native-email-link": "^1.16.1",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~4.1.3",
