mobile wip, haiku 4.5, bedrock mep profiles, disable non anthropic models for now

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -39,6 +39,12 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "9fca3cff-a291-41c9-88b9-feb8053b990f"
+      }
+    },
+    "owner": "kortix"
   }
 }
