--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -14,6 +14,12 @@
       "ios": {
         "simulator": false
       }
+    },
+    "testflight": {
+      "ios": {
+        "simulator": false,
+        "distribution": "store"
+      }
     }
   },
   "submit": {
