--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -81,10 +81,12 @@
     "react-native-sound-level": "^1.3.0",
     "react-native-sse": "^1.2.1",
     "react-native-svg": "15.12.1",
+    "react-native-syntax-highlighter": "^2.1.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
+    "react-syntax-highlighter": "^16.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7"
@@ -92,6 +94,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~19.1.10",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "patch-package": "^8.0.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
