--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "kortix",
+    "name": "Kortix",
     "slug": "kortix",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -19,7 +19,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.kortix.app",
-      "buildNumber": "2",
+      "buildNumber": "3",
       "usesAppleSignIn": true
     },
     "android": {
@@ -41,6 +41,14 @@
         "expo-audio",
         {
           "microphonePermission": "Allow $(PRODUCT_NAME) to record audio for transcription."
+        }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
         }
       ]
     ],
