--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -51,6 +51,7 @@
     "expo-auth-session": "^7.0.8",
     "expo-av": "^16.0.7",
     "expo-blur": "~15.0.7",
+    "expo-build-properties": "^1.0.9",
     "expo-clipboard": "^8.0.7",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "~19.0.17",
