--- a/apps/mobile/ios/Podfile
+++ b/apps/mobile/ios/Podfile
@@ -20,7 +20,7 @@ platform :ios, podfile_properties['ios.deploymentTarget'] || '15.1'
 
 prepare_react_native_project!
 
-target 'kortix' do
+target 'Kortix' do
   use_expo_modules!
 
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
@@ -56,19 +56,5 @@ target 'kortix' do
       :mac_catalyst_enabled => false,
       :ccache_enabled => ccache_enabled?(podfile_properties),
     )
-  end
-end
-
-
-# apple-targets-extension-loader -- Dynamic loading of target configurations
-Dir.glob(File.join(__dir__, '..', 'targets', '**', 'pods.rb')).each do |target_file|
-  target_name = File.basename(File.dirname(target_file))
-  target target_name do
-    # Create a new binding with access to necessary methods and variables
-    target_binding = binding
-    target_binding.local_variable_set(:podfile_properties, podfile_properties)
-
-    # Evaluate the target file content in the new binding
-    eval(File.read(target_file), target_binding, target_file)
   end
 end
