--- a/apps/mobile/ios/kortix.xcodeproj/xcshareddata/xcschemes/kortix.xcscheme
+++ b/apps/mobile/ios/kortix.xcodeproj/xcshareddata/xcschemes/kortix.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "kortix.app"
-               BlueprintName = "kortix"
-               ReferencedContainer = "container:kortix.xcodeproj">
+               BuildableName = "Kortix.app"
+               BlueprintName = "Kortix"
+               ReferencedContainer = "container:Kortix.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,15 +33,15 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "kortixTests.xctest"
-               BlueprintName = "kortixTests"
-               ReferencedContainer = "container:kortix.xcodeproj">
+               BuildableName = "KortixTests.xctest"
+               BlueprintName = "KortixTests"
+               ReferencedContainer = "container:Kortix.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "kortix.app"
-            BlueprintName = "kortix"
-            ReferencedContainer = "container:kortix.xcodeproj">
+            BuildableName = "Kortix.app"
+            BlueprintName = "Kortix"
+            ReferencedContainer = "container:Kortix.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "kortix.app"
-            BlueprintName = "kortix"
-            ReferencedContainer = "container:kortix.xcodeproj">
+            BuildableName = "Kortix.app"
+            BlueprintName = "Kortix"
+            ReferencedContainer = "container:Kortix.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
