add logo + .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -84,3 +84,7 @@ EXA_API_KEY=""
 
 CHUNKR_API_KEY=""
 
+SUPABASE_WEBHOOK_SECRET=
+MAILTRAP_API_TOKEN=
+MAILTRAP_SENDER_EMAIL=
+MAILTRAP_SENDER_NAME=
