--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -87,13 +87,15 @@
     "react-native-svg": "15.12.1",
     "react-native-syntax-highlighter": "^2.1.0",
     "react-native-url-polyfill": "^3.0.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "react-syntax-highlighter": "^16.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.14",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
