--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@bacons/apple-targets": "^3.0.5",
     "@gorhom/bottom-sheet": "^5.2.6",
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.0.0",
@@ -64,6 +65,7 @@
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.12",
     "expo-web-browser": "^15.0.8",
     "fuse.js": "^7.1.0",
     "i18next": "^25.6.0",
