--- a/backend/supabase/config.toml
+++ b/backend/supabase/config.toml
@@ -45,15 +45,10 @@ max_client_conn = 100
 # [db.vault]
 # secret_key = "env(SECRET_VALUE)"
 
-# Custom database settings for webhook functionality
+# Note: Webhook configuration is stored in the database table `webhook_config`
 # See: migrations/20251113000000_welcome_email_webhook.sql
-#
-# ⚠️  These settings ONLY apply if you're running LOCAL Supabase (rare)
-# Most people use CLOUD Supabase → configure in Supabase Dashboard instead
-# See: backend/supabase/WEBHOOK_SETUP.md
-[db.settings]
-app.backend_url = "http://backend:8000"
-app.webhook_secret = "your-webhook-secret-here-change-in-production"
+# For cloud Supabase, configure via SQL Editor in Dashboard
+# For local Supabase, see: backend/supabase/WEBHOOK_SETUP.md
 
 [db.migrations]
 # Specifies an ordered list of schema files that describe your database.
