--- a/frontend/package.json
+++ b/frontend/package.json
@@ -130,6 +130,7 @@
     "mermaid": "^11.12.0",
     "motion": "^12.5.0",
     "next": "^15.3.1",
+    "next-intl": "^4.5.3",
     "next-themes": "^0.4.6",
     "npm": "^11.5.2",
     "papaparse": "^5.5.2",
