--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -81,6 +81,8 @@
     "react-native-email-link": "^1.16.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-markdown-display": "^7.0.2",
+    "react-native-purchases": "^9.6.5",
+    "react-native-purchases-ui": "^9.6.5",
     "react-native-reanimated": "~4.1.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
