--- a/.github/workflows/update-PROD.yml
+++ b/.github/workflows/update-PROD.yml
@@ -23,6 +23,24 @@ jobs:
           git checkout PRODUCTION
           git rebase origin/main
           git push origin PRODUCTION --force
+      # - name: Set up Supabase CLI
+      #   uses: supabase/setup-cli@v1
+      #   with:
+      #     version: latest
+      # - name: Push Supabase migrations to production
+      #   env:
+      #     SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+      #     SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
+      #     SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_REF }}
+      #   run: |
+      #     cd backend
+      #     echo "Linking to Supabase project: $SUPABASE_PROJECT_ID"
+      #     # Link project non-interactively using access token and database password
+      #     supabase link --project-ref "$SUPABASE_PROJECT_ID" --password "$SUPABASE_DB_PASSWORD"
+      #     echo "Pushing database migrations..."
+      #     # Push migrations non-interactively (yes handles any confirmation prompts)
+      #     yes | supabase db push
+      #   continue-on-error: false
       - name: Trigger Docker Build
         uses: peter-evans/repository-dispatch@v3
         with:
