--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -65,6 +65,7 @@
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
+    "expo-tracking-transparency": "^6.0.7",
     "expo-updates": "~29.0.12",
     "expo-web-browser": "^15.0.8",
     "fuse.js": "^7.1.0",
