--- a/.github/workflows/update-PROD.yml
+++ b/.github/workflows/update-PROD.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          clean: true
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Configure Git
         run: |
