--- a/.github/workflows/update-PROD.yml
+++ b/.github/workflows/update-PROD.yml
@@ -19,10 +19,11 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-      - name: Rebase PRODUCTION
+      - name: Sync PRODUCTION with main
         run: |
+          git fetch origin
           git checkout PRODUCTION
-          git rebase origin/main
+          git reset --hard origin/main
           git push origin PRODUCTION --force
       # - name: Set up Supabase CLI
       #   uses: supabase/setup-cli@v1
