gigantic improvements wip

--- a/.gitignore
+++ b/.gitignore
@@ -203,6 +203,10 @@ redis_data
 backend/.test_token_compression.py
 backend/test_token_compression_data.py
 
+# Debug streams output
+backend/debug_streams/
+backend/core/agentpress/debug_streams/
+
 dump.rdb
 
 # CodeWebChat state and logs (auto-added)
