--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,6 @@ apps/mobile/.env*.local
 apps/mobile/app-example
 # Docker-specific env files
 *.env.docker
+
+# Infra (separate repository)
+infra/
