feat: email notifications

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,10 +14,7 @@
     "@bacons/apple-targets": "^3.0.5",
     "@gorhom/bottom-sheet": "^5.2.6",
     "@lottiefiles/dotlottie-react": "^0.13.5",
-    "@novu/react-native": "^3.11.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-firebase/app": "^23.5.0",
-    "@react-native-firebase/messaging": "^23.5.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/accordion": "^1.2.0",
@@ -58,6 +55,7 @@
     "expo-build-properties": "^1.0.9",
     "expo-clipboard": "^8.0.7",
     "expo-dev-client": "~6.0.18",
+    "expo-device": "^8.0.9",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "~19.0.17",
     "expo-font": "^14.0.9",
