--- a/apps/mobile/ios/Kortix.xcodeproj/xcshareddata/xcschemes/kortix.xcscheme
+++ b/apps/mobile/ios/Kortix.xcodeproj/xcshareddata/xcschemes/kortix.xcscheme
@@ -60,6 +60,9 @@
             ReferencedContainer = "container:Kortix.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../Kortix.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
