--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,8 @@ ENV_MODE=local
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
+# JWT secret from Supabase Dashboard > Project Settings > API > JWT Secret (REQUIRED for auth security)
+SUPABASE_JWT_SECRET=
 
 ##### REDIS
 # Use "redis" when using docker compose, or "localhost" for fully local
