--- a/backend/.env.example
+++ b/backend/.env.example
@@ -90,3 +90,6 @@ SUPABASE_WEBHOOK_SECRET=
 MAILTRAP_API_TOKEN=
 MAILTRAP_SENDER_EMAIL=
 MAILTRAP_SENDER_NAME=
+
+# Mock image generation
+MOCK_IMAGE_GENERATION=true
