--- a/frontend/package.json
+++ b/frontend/package.json
@@ -87,7 +87,6 @@
     "@tiptap/starter-kit": "^3.3.0",
     "@types/jszip": "^3.4.0",
     "@types/papaparse": "^5.3.15",
-    "@types/xlsx": "^0.0.35",
     "@uiw/codemirror-extensions-langs": "^4.23.10",
     "@uiw/codemirror-theme-vscode": "^4.23.10",
     "@uiw/codemirror-theme-xcode": "^4.23.10",
@@ -111,7 +110,7 @@
     "diff": "^7.0.0",
     "extract-colors": "^4.2.0",
     "file-saver": "^2.0.5",
-    "flags": "^3.2.0",
+    "flags": "^4.0.2",
     "framer-motion": "^12.6.5",
     "geist": "^1.2.1",
     "gsap": "^3.13.0",
@@ -155,6 +154,7 @@
     "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^3.0.6",
     "react-scan": "^0.0.44",
+    "read-excel-file": "^6.0.1",
     "recharts": "^3.2.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
