--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -41,7 +41,6 @@
     "@rn-primitives/toggle": "^1.2.0",
     "@rn-primitives/toggle-group": "^1.2.0",
     "@rn-primitives/tooltip": "^1.2.0",
-    "@rob117/react-native-selectable-text": "^2.1.0",
     "@supabase/supabase-js": "^2.75.0",
     "@tanstack/react-query": "^5.90.5",
     "class-variance-authority": "^0.7.1",
@@ -95,6 +94,7 @@
     "react-native-sse": "^1.2.1",
     "react-native-svg": "15.12.1",
     "react-native-syntax-highlighter": "^2.1.0",
+    "react-native-uitextview": "^2.1.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
