--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -65,6 +65,7 @@
     "expo-linking": "~8.0.8",
     "expo-notifications": "~0.32.13",
     "expo-router": "~6.0.13",
+    "expo-sharing": "^14.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.8",
