--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@calcom/embed-react": "^1.5.2",
     "@codemirror/view": "^6.38.1",
+    "@cyntler/react-doc-viewer": "^1.17.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -56,6 +57,7 @@
     "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-query-devtools": "^5.75.2",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-bubble-menu": "^3.13.0",
     "@tiptap/extension-character-count": "^3.3.0",
     "@tiptap/extension-code-block-lowlight": "^3.3.0",
     "@tiptap/extension-collaboration": "^3.3.0",
@@ -85,6 +87,7 @@
     "@tiptap/pm": "^3.3.0",
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
+    "@tiptap/suggestion": "^3.13.0",
     "@types/jszip": "^3.4.0",
     "@types/papaparse": "^5.3.15",
     "@uiw/codemirror-extensions-langs": "^4.23.10",
@@ -98,6 +101,7 @@
     "autoprefixer": "10.4.17",
     "canvas": "^3.1.0",
     "canvas-confetti": "^1.9.4",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
@@ -161,6 +165,7 @@
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
+    "streamdown": "^1.6.10",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar": "^4.0.2",
     "tailwind-scrollbar-hide": "^2.0.0",
