--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -45,6 +45,14 @@
         "EXPO_PUBLIC_REVENUECAT_IOS_API_KEY": "appl_UpcFYduOZYUgSqKPNvtzgXkPCeh",
         "EXPO_PUBLIC_REVENUECAT_ANDROID_API_KEY": "incoming"
       }
+    },
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
+      "environment": "development"
     }
   },
   "submit": {
