--- a/.github/workflows/mobile-eas-update.yml
+++ b/.github/workflows/mobile-eas-update.yml
@@ -50,7 +50,8 @@ jobs:
 
       - name: Install dependencies
         working-directory: apps/mobile
-        run: npm ci
+        run: |
+          npm install --package-lock-only || npm install
 
       - name: Get branch name
         id: branch
