fix stream, color prompt, rem old docs tool

--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -61,6 +61,9 @@
         "appleId": "mkprivat2005@gmail.com",
         "ascAppId": "6754448524",
         "appleTeamId": "T8G9J33433"
+      },
+      "android": {
+        "track": "internal"
       }
     },
     "testflight": {
