--- a/.github/workflows/mobile-testflight.yml
+++ b/.github/workflows/mobile-testflight.yml
@@ -52,7 +52,7 @@ jobs:
           EXPO_PUBLIC_REVENUECAT_IOS_API_KEY: appl_UpcFYduOZYUgSqKPNvtzgXkPCeh
           EXPO_PUBLIC_REVENUECAT_ANDROID_API_KEY: incoming
         run: |
-          eas build --profile testflight --platform ios --auto-submit --non-interactive
+          eas build --profile testflight --platform ios --auto-submit --non-interactive --no-wait
 
       - name: Build Android TestFlight
         if: github.event.inputs.platform == 'android' || github.event.inputs.platform == 'all'
@@ -65,4 +65,4 @@ jobs:
           EXPO_PUBLIC_REVENUECAT_IOS_API_KEY: appl_UpcFYduOZYUgSqKPNvtzgXkPCeh
           EXPO_PUBLIC_REVENUECAT_ANDROID_API_KEY: incoming
         run: |
-          eas build --profile testflight --platform android --auto-submit --non-interactive
+          eas build --profile testflight --platform android --auto-submit --non-interactive --no-wait
