--- a/apps/mobile/android/app/build.gradle
+++ b/apps/mobile/android/app/build.gradle
@@ -4,6 +4,16 @@ apply plugin: "com.facebook.react"
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
+// Read version from app.json
+def getVersionName = { ->
+    try {
+        def appJson = new groovy.json.JsonSlurper().parse(new File("${projectRoot}/app.json"))
+        return appJson.expo.version ?: "1.0.0"
+    } catch (Exception e) {
+        return "1.0.0"
+    }
+}
+
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -93,7 +103,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode project.hasProperty('versionCode') ? project.property('versionCode').toInteger() : 1
-        versionName project.hasProperty('versionName') ? project.property('versionName') : "1.0.0"
+        versionName project.hasProperty('versionName') ? project.property('versionName') : getVersionName()
 
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
     }
