feat: add PostHog visitor analytics and unified daily analytics card
- Add PostHog integration for tracking landing page visitors
- Add conversion funnel endpoint (visitors → signups → subscriptions)
- Add POSTHOG_PERSONAL_API_KEY, POSTHOG_PROJECT_ID, POSTHOG_HOST config
- Merge 3 date-based cards into unified Daily Analytics card
- Use parallel API calls with asyncio.gather for better performance
- Add useVisitorStats and useConversionFunnel frontend hooks

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -93,3 +93,8 @@ MAILTRAP_SENDER_NAME=
 
 # Mock image generation
 MOCK_IMAGE_GENERATION=true
+
+# PostHog Analytics (for admin dashboard visitor tracking)
+POSTHOG_PERSONAL_API_KEY=    # Personal API key (phx_...) from PostHog Settings
+POSTHOG_PROJECT_ID=          # Project ID from PostHog Settings
+POSTHOG_HOST=https://eu.posthog.com    # or https://app.posthog.com for US
