--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@bacons/apple-targets": "^3.0.5",
+    "@expensify/react-native-live-markdown": "^0.1.317",
     "@gorhom/bottom-sheet": "^5.2.6",
     "@lottiefiles/dotlottie-react": "^0.13.5",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -50,6 +51,7 @@
     "@tanstack/react-query": "^5.90.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "expensify-common": "^2.0.168",
     "expo": "~54.0.20",
     "expo-apple-authentication": "^8.0.7",
     "expo-audio": "^1.0.13",
@@ -78,6 +80,7 @@
     "expo-updates": "~29.0.12",
     "expo-web-browser": "^15.0.8",
     "fuse.js": "^7.1.0",
+    "html-entities": "^2.5.3",
     "i18next": "^25.6.0",
     "kill-port": "^2.0.1",
     "lottie-react-native": "^7.3.4",
@@ -100,12 +103,11 @@
     "react-native-sse": "^1.2.1",
     "react-native-svg": "15.12.1",
     "react-native-syntax-highlighter": "^2.1.0",
-    "react-native-uitextview": "^2.1.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "^13.16.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.6.0",
     "react-syntax-highlighter": "^16.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.14",
