--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -59,7 +59,7 @@
     "expo-av": "^16.0.7",
     "expo-blur": "~15.0.7",
     "expo-build-properties": "^1.0.9",
-    "expo-clipboard": "^8.0.7",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.9",
@@ -90,6 +90,7 @@
     "react-dom": "19.1.0",
     "react-i18next": "^16.0.1",
     "react-native": "0.81.5",
+    "react-native-context-menu-view": "^1.21.0",
     "react-native-drawer-layout": "^4.1.13",
     "react-native-email-link": "^1.16.1",
     "react-native-gesture-handler": "~2.28.0",
