--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -67,7 +67,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Deploy to staging
+      - name: Deploy to staging (minimal downtime)
         if: steps.get_tag_name.outputs.environment == 'staging'
         uses: appleboy/ssh-action@v1
         with:
@@ -80,39 +80,75 @@ jobs:
             git reset --hard origin/main
             set -a && source .env && set +a
             
-            # Show disk usage before cleanup
-            echo "=== Disk usage before cleanup ==="
+            # Show disk usage before deployment
+            echo "=== Disk usage before deployment ==="
             df -h / | tail -1
             docker system df || true
             
-            # Stop and remove containers, networks, and orphaned containers
-            echo "=== Stopping and removing containers ==="
-            docker compose down --remove-orphans || true
-            # Force remove any remaining stopped containers
-            docker compose rm -f || true
-            # Remove containers by name if they still exist (fallback)
-            docker rm -f backend-api-1 backend-worker-1 backend-redis-1 2>/dev/null || true
+            # Function to wait for service health
+            wait_for_healthy() {
+              local service=$1
+              local max_attempts=30
+              local attempt=0
+              
+              echo "Waiting for $service to be healthy..."
+              while [ $attempt -lt $max_attempts ]; do
+                if docker compose ps $service | grep -q "healthy"; then
+                  echo "$service is healthy"
+                  return 0
+                fi
+                attempt=$((attempt + 1))
+                echo "Attempt $attempt/$max_attempts - waiting for $service..."
+                sleep 2
+              done
+              
+              echo "ERROR: $service failed to become healthy"
+              docker compose logs $service --tail 50
+              return 1
+            }
             
-            # Clean up unused Docker resources before building
-            echo "=== Cleaning up old images and build cache ==="
+            # Clean up old images BEFORE building to save space
+            echo "=== Cleaning up old images before build ==="
             docker image prune -af --filter "until=24h" || true
-            docker builder prune -af --filter "until=24h" || true
             
-            docker compose build
-            docker compose up -d
+            # Build new images (while old containers still running)
+            echo "=== Building new images ==="
+            docker compose build api worker
             
-            # Clean up after deployment - remove unused images and build cache
-            echo "=== Final cleanup ==="
-            docker image prune -af || true
+            # Quick restart API service (minimal downtime ~2-5 seconds)
+            echo "=== Deploying API service (quick restart) ==="
+            docker compose up -d --force-recreate --no-deps api
+            wait_for_healthy api
+            
+            # Quick restart Worker service (can run alongside for graceful shutdown)
+            echo "=== Deploying Worker service ==="
+            # Workers can overlap during transition for graceful job completion
+            docker compose up -d --no-deps --scale worker=2 worker || docker compose up -d --no-deps worker
+            sleep 5
+            wait_for_healthy worker
+            docker compose up -d --no-deps --scale worker=1 worker
+            
+            # Verify all services are running
+            echo "=== Verifying deployment ==="
+            docker compose ps
+            
+            # Clean up after deployment
+            echo "=== Post-deployment cleanup ==="
+            # Remove unused images (but keep recent ones)
+            docker image prune -af --filter "until=1h" || true
+            # Clean up build cache aggressively
             docker builder prune -af || true
+            # Remove dangling images
             docker image prune -f || true
             # Remove unused volumes (only those not attached to any container)
             docker volume prune -f || true
             
-            # Show disk usage after cleanup
-            echo "=== Disk usage after cleanup ==="
+            # Show final disk usage
+            echo "=== Disk usage after deployment ==="
             df -h / | tail -1
             docker system df || true
+            
+            echo "=== Deployment complete - minimal downtime strategy ==="
 
       # - name: Deploy to staging [legacy]
       #   if: steps.get_tag_name.outputs.environment == 'staging'
