android fix bottom sheet blocking ui

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -29,6 +29,7 @@
     },
     "android": {
       "edgeToEdgeEnabled": true,
+      "softwareKeyboardLayoutMode": "pan",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
