--- a/frontend/package.json
+++ b/frontend/package.json
@@ -143,6 +143,7 @@
     "postcss": "8.4.33",
     "posthog-js": "^1.258.6",
     "posthog-node": "^5.6.0",
+    "puppeteer": "^23.12.0",
     "radix-ui": "^1.4.3",
     "react": "^18",
     "react-color-palette": "^7.3.1",
