--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -75,6 +75,7 @@ dependencies = [
   "composio>=0.8.0",
   "python-pptx>=1.0.0",
   "beautifulsoup4>=4.12.0",
+  "weasyprint>=63.0",
   "cssutils>=2.9.0",
   "fastapi-sso>=0.9.0",
   "daytona>=0.21.6",
