--- a/frontend/package.json
+++ b/frontend/package.json
@@ -119,7 +119,6 @@
     "geist": "^1.2.1",
     "gsap": "^3.13.0",
     "hjson": "^3.2.2",
-    "html-to-docx": "^1.8.0",
     "html2pdf.js": "^0.10.3",
     "install": "^0.13.0",
     "jju": "^1.4.0",
@@ -140,10 +139,10 @@
     "npm": "^11.5.2",
     "papaparse": "^5.5.2",
     "pdfjs-dist": "4.8.69",
+    "playwright": "^1.57.0",
     "postcss": "8.4.33",
     "posthog-js": "^1.258.6",
     "posthog-node": "^5.6.0",
-    "puppeteer": "^23.12.0",
     "radix-ui": "^1.4.3",
     "react": "^18",
     "react-color-palette": "^7.3.1",
